--- a/debian/control
+++ b/debian/control
@@ -219,7 +219,7 @@ Package-Type: udeb
 Architecture: amd64 arm64 armel armhf hppa i386 m68k mips mipsel mipsn32 mipsn32el mips64 mips64el mipsr6 mipsr6el mipsn32r6 mipsn32r6el mips64r6 mips64r6el nios2 powerpc ppc64 ppc64el riscv64 sparc sparc64 s390x sh3 sh4 x32
 Section: debian-installer
 Priority: optional
-Provides: libc6, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
+Provides: libc6, libc-udeb, libnss-dns-udeb, libnss-files-udeb
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
@@ -293,7 +293,7 @@ Package-Type: udeb
 Architecture: alpha ia64
 Section: debian-installer
 Priority: optional
-Provides: libc6.1, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
+Provides: libc6.1, libc-udeb, libnss-dns-udeb, libnss-files-udeb
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
@@ -367,7 +367,7 @@ Package-Type: udeb
 Architecture: hurd-i386
 Section: debian-installer
 Priority: optional
-Provides: libc0.3, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
+Provides: libc0.3, libc-udeb, libnss-dns-udeb, libnss-files-udeb
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
@@ -441,7 +441,7 @@ Package-Type: udeb
 Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: debian-installer
 Priority: optional
-Provides: libc0.1, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
+Provides: libc0.1, libc-udeb, libnss-dns-udeb, libnss-files-udeb
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
