--- a/debian/rules
+++ b/debian/rules
@@ -95,7 +95,7 @@ crypt = no
 BASE_CC = gcc
 BASE_CXX = g++
 BASE_MIG = mig
-DEB_GCC_VERSION ?= -11
+DEB_GCC_VERSION ?=
 
 RUN_TESTSUITE = yes
 TIMEOUTFACTOR = 25
