--- a/debian/rules
+++ b/debian/rules
@@ -29,6 +29,7 @@
 # These are done as absolute paths so that in the case of filesystem size
 # limitations, they can be overridden and spread all over.
 build-tree := build-tree
+debian-tmp = debian/tmp$(filter-out -libc,-$(curpass))
 stamp := $(CURDIR)/stamp-dir/
 DUMMY := $(shell mkdir -p $(stamp))
 
@@ -43,22 +44,17 @@ DEB_BUILD_ARCH        ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 DEB_BUILD_ARCH_BITS   ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH_BITS)
 DEB_BUILD_GNU_TYPE    ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
-DEB_SOURCE_PACKAGE := $(strip $(shell egrep '^Source: ' debian/control | cut -f 2 -d ':'))
-
-DEB_VERSION := $(shell dpkg-parsechangelog | egrep '^Version:' | cut -f 2 -d ' ')
-GLIBC_VERSION = $(shell echo $(DEB_VERSION) | sed -e 's/.*://' -e 's/[+-].*//')
-
-SOURCE_DATE_EPOCH ?= $(shell dpkg-parsechangelog -STimestamp)
+include /usr/share/dpkg/pkg-info.mk
 
 # The minimum package version with which these packages are compatible.
-shlib_dep_ver = $(GLIBC_VERSION)
+shlib_dep_ver = $(DEB_VERSION_UPSTREAM)
 shlib_dep = $(libc) (>= $(shlib_dep_ver))
 
 DEB_BUILDDIR ?= $(build-tree)/$(DEB_HOST_ARCH)-$(curpass)
 DEB_BUILDDIRLIBC ?= $(build-tree)/$(DEB_HOST_ARCH)-libc
 
 GLIBC_SOURCES = $(filter-out debian $(shell basename $(stamp)) $(build-tree), $(wildcard *))
-		 
+
 # Support multiple makes at once based on number of processors
 ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 NJOBS := -j $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
@@ -70,6 +66,9 @@ define unsetenv
   $(1) =
 endef
 $(foreach v, CPPFLAGS CFLAGS CXXFLAGS LDFLAGS, $(if $(filter environment,$(origin $(v))),$(eval $(call unsetenv, $(v)))))
+
+# export debhelper substitution variables
+export $(build-tree)
 
 # Default setup
 GLIBC_PASSES ?= libc
@@ -129,8 +128,8 @@ curpass = $(filter-out %_,$(subst _,_ ,$@))
 
 ifneq ($(filter stage1,$(DEB_BUILD_PROFILES)),)
   DEB_ARCH_REGULAR_PACKAGES = $(libc)-dev
-  DEB_INDEP_REGULAR_PACKAGES = 
-  DEB_UDEB_PACKAGES = 
+  DEB_INDEP_REGULAR_PACKAGES =
+  DEB_UDEB_PACKAGES =
   ifeq ($(filter nocheck,$(DEB_BUILD_OPTIONS)),)
     DEB_BUILD_OPTIONS+=nocheck
   endif
